--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: ghostwhite;
+    margin: 0;
+    min-height: 100vh;
+    font-family: BrutGrotesqueBook, Helvetica, Arial, sans-serif;
 }
