--- a/client/style.css
+++ b/client/style.css
@@ -7,3 +7,43 @@ body {
     min-height: 100vh;
     font-family: BrutGrotesqueBook, Helvetica, Arial, sans-serif;
 }
+
+/* MODAL */
+
+.profile-picture-uploader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    width: 30vw;
+    height: 30vh;
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    position: relative;
+    border-radius: 7px;
+}
+
+.closeButton {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
