displays ProfilePicture component in Profile component

--- a/client/style.css
+++ b/client/style.css
@@ -62,3 +62,13 @@ header img {
     cursor: pointer;
     outline: inherit;
 }
+
+/* PROFILE */
+
+.profile {
+    display: flex;
+}
+
+.profile img {
+    width: 200px;
+}
