--- a/client/style.css
+++ b/client/style.css
@@ -21,6 +21,7 @@ header img {
     width: 80px;
     border: solid 1.5px black;
     border-radius: 7px;
+    cursor: pointer;
 }
 
 /* MODAL */
@@ -71,6 +72,7 @@ header img {
 
 .profile img {
     width: 200px;
+    cursor: pointer;
 }
 
 /* FIND PEOPLE */
