--- a/client/style.css
+++ b/client/style.css
@@ -25,6 +25,108 @@ header img {
     cursor: pointer;
 }
 
+header a {
+    text-decoration: none;
+    color: black;
+}
+
+/* REGISTER / LOGIN / RESET PAGE TEMPLATE*/
+
+.generalUserForm {
+    max-width: 360px;
+    margin-top: 10%;
+    padding: 45px;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+        0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    outline: solid 0px rgba(0, 0, 0, 0.2);
+}
+
+.generalUserForm h2 {
+    margin-top: 0;
+}
+
+.generalUserForm input {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+.generalUserForm button {
+    margin-bottom: 10px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #a3d2ca;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #ffffff;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+}
+
+.generalUserForm button:hover {
+    background: #8fd6e1;
+}
+
+.generalUserForm form {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.generalUserForm a {
+    font-size: 12px;
+    text-decoration: none;
+    color: grey;
+}
+
+.generalUserForm a:hover {
+    color: black;
+}
+
+/* REGISTRATION */
+
+.welcome {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.welcome-intro {
+    margin-right: 150px;
+    max-width: 300px;
+}
+
+.welcome-intro h1 {
+    font-size: 3rem;
+    letter-spacing: 2px;
+}
+
+.welcome-intro p {
+    letter-spacing: 0.5px;
+}
+
+.registration-links {
+    display: flex;
+    justify-content: space-around;
+}
+
+/* RESET PASSWORD */
+.reset-password .reset-link {
+    font-size: inherit;
+}
+
 /* MODAL */
 
 .profile-picture-uploader {
@@ -65,15 +167,119 @@ header img {
     outline: inherit;
 }
 
+/* GENERELL PROFILE CARD*/
+
+.userProfileCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 500px;
+    height: 500px;
+    padding: 5px;
+    text-align: center;
+
+    border-radius: 20px;
+
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+        0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    outline: solid 0px rgba(0, 0, 0, 0.2);
+}
+
 /* PROFILE */
 
 .profile {
     display: flex;
+    justify-content: center;
 }
 
 .profile img {
     width: 200px;
     cursor: pointer;
+}
+
+.profile textarea {
+    width: 450px;
+    min-height: 100px;
+    resize: none;
+    border-radius: 7px;
+    border: 1px solid #ddd;
+    padding: 0.5rem;
+    color: #666;
+    box-shadow: inset 0 0 0.2rem #ddd;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    outline: none;
+}
+
+.profile textarea:focus {
+    box-shadow: inset 0 0 0.7px 0.7px black;
+}
+
+.profile button {
+    margin-top: 15px;
+}
+
+.profileButton {
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    background-color: white;
+}
+
+.profileButton::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: rgba(0, 0, 0, 0.2);
+    transition: width 0.3s;
+}
+
+.profileButton:hover::after {
+    width: 100%;
+}
+
+/* OTHER USER'S PROFILE*/
+
+.userProfileCard img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    /*     cursor: default;
+ */
+}
+
+.userProfileCard button {
+    margin-top: 35px;
+}
+
+.userProfileCard h2 {
+    margin-top: 40px;
+}
+
+.userProfileCard button {
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    background-color: white;
+    font-size: 15px;
+}
+
+.userProfileCard button::after {
+    outline: none;
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: rgba(0, 0, 0, 0.2);
+    transition: width 0.3s;
+}
+
+.userProfileCard button:hover::after {
+    width: 100%;
 }
 
 /* FIND PEOPLE */
@@ -84,19 +290,72 @@ header img {
 
 .find-people img {
     width: 100px;
+    margin-bottom: 30px;
+}
+
+.find-people a {
+    display: flex;
+    flex-direction: column;
+}
+
+.new-friends {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+.new-friends h2 {
+    text-align: center;
+}
+
+.find-friends {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+.find-friends p {
+    align-self: center;
+}
+
+.find-friends-list {
+    display: flex;
+    justify-content: center;
+}
+
+.find-friends-list li {
+    height: 50px i !important;
 }
 
 /* (POTENTIAL) FRIENDS LIST*/
+
+.friends {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+.friends h2 {
+    text-align: center;
+}
 
 .friends img {
     width: 100px;
     height: 100px;
     object-fit: cover;
     border-radius: 50%;
+    align-self: center;
 }
 
 .friends ul {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .friends li {
@@ -123,26 +382,6 @@ header img {
     box-shadow: 0 0 3pt 2pt rgba(0, 0, 0, 0.2);
 }
 
-.friends li button {
-    cursor: pointer;
-    padding: 5px;
-    border: none;
-    background-color: white;
-}
-
-.friends li button::after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    background: rgba(0, 0, 0, 0.2);
-    transition: width 0.3s;
-}
-
-.friends li button:hover::after {
-    width: 100%;
-}
-
 .friends a {
     text-decoration: none;
     color: black;
@@ -154,3 +393,25 @@ header img {
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
+/* button {
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    background-color: white;
+    font-size: large;
+}
+
+button::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: rgba(0, 0, 0, 0.2);
+    transition: width 0.3s;
+}
+
+button:hover::after {
+    width: 100%;
+}
+ */
